added more site info & fixed category colouring idiosyncracy

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <h1 id="title">Arnav Kumar</h1>
       </hgroup>
-            <p><a href="https://github.com/arnavcs">[github]</a> <a
+            <p><a href="https://github.com/arnavcs">[Github]</a> <a
 href="./resume-cv/resume.pdf">[resume]</a> <a
 href="./resume-cv/cv.pdf">[CV]</a></p>
           </header>
@@ -20,9 +20,10 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <section id="site-introduction" class="episode">
     <h1>Site Introduction</h1>
     <ul>
-    <li>Links presented in round brackets like <a href="">(*)</a> are to
-    content which I did not create, whereas those in square brackets
-    like <a href="">[*]</a> are to content which I created.</li>
+    <li>Links wrapped in (square|round) brackets are to content which I
+    (did|didn’t) create, respectively.</li>
+    <li>This website does not have a sitemap, as everything is accesible
+    from this homepage.</li>
     </ul>
     </section>
     </div>
@@ -201,8 +202,8 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <h2
     id="interplanetary-file-explorer-try-it-github-devpost-jan-2023"><strong>Interplanetary
     File Explorer</strong> <a href="https://ipfe.elguindi.xyz/">[try
-    it]</a> <a href="https://github.com/youssefsoli/IPFE">[github]</a>
-    <a href="https://devpost.com/software/changeme">[devpost]</a> <span
+    it]</a> <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
+    <a href="https://devpost.com/software/changeme">[Devpost]</a> <span
     class="right">Jan 2023</span></h2>
     <ul>
     <li>A visual file explorer of an IPFS written in Golang, Python, and
@@ -224,33 +225,34 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </section>
     <section id="self-learning" class="episode">
     <h1>Self-Learning</h1>
-    <h2 id="concurrency">Concurrency</h2>
+    <h2 id="concurrency"><strong>Concurrency</strong></h2>
     <ul>
     <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
     href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
     </ul>
-    <h2 id="formal-logic">Formal Logic</h2>
+    <h2 id="formal-logic"><strong>Formal Logic</strong></h2>
     <ul>
     <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
     </ul>
-    <h2 id="programming-languages">Programming Languages</h2>
+    <h2 id="programming-languages"><strong>Programming
+    Languages</strong></h2>
     <ul>
     <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
     <a href="https://learnyouahaskell.com/">(book)</a></li>
     </ul>
-    <h2 id="machine-learning">Machine Learning</h2>
+    <h2 id="machine-learning"><strong>Machine Learning</strong></h2>
     <ul>
     <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
     href="http://ciml.info/">(book)</a> (in progress)</li>
     </ul>
-    <h2 id="cyber-security">Cyber Security</h2>
+    <h2 id="cyber-security"><strong>Cyber Security</strong></h2>
     <ul>
     <li>We Chall <a
     href="https://www.wechall.net/challs">(challenges)</a> <a
     href="./wargame/we-chall/index.html">[hints &amp; notes]</a> (in
     progress)</li>
     </ul>
-    <h2 id="graphics">Graphics</h2>
+    <h2 id="graphics"><strong>Graphics</strong></h2>
     <ul>
     <li>University of Utah CS 4600 <a
     href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a>
