--- a/index.html
+++ b/index.html
@@ -22,28 +22,29 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <ul>
     <li>Links wrapped in (square|round) brackets are to content which I
     (did|didn’t) create, respectively.</li>
-    <li>This website does not have a sitemap, as everything is accesible
-    from this homepage.</li>
+    <li>This website does not have a sitemap yet, as everything is
+    accesible from this homepage.</li>
     </ul>
     </section>
     </div>
     <div class="left-col">
     <section id="formal-education" class="episode">
     <h1>Formal Education</h1>
-    <p>Italics means self-taught or audited.</p>
+    <p>Italics means self-taught or audited. Course names are
+    abbreviated; hover for full course name.</p>
     <h2
     id="waterloo-undergraduate-degree-bachelors-of-computer-science"><strong>Waterloo
     Undergraduate Degree</strong> : Bachelors of Computer Science</h2>
     <table style="width:99%;">
     <colgroup>
-    <col style="width: 1%" />
-    <col style="width: 15%" />
-    <col style="width: 16%" />
-    <col style="width: 22%" />
-    <col style="width: 21%" />
-    <col style="width: 15%" />
-    <col style="width: 2%" />
-    <col style="width: 2%" />
+    <col style="width: 0%" />
+    <col style="width: 14%" />
+    <col style="width: 12%" />
+    <col style="width: 17%" />
+    <col style="width: 19%" />
+    <col style="width: 14%" />
+    <col style="width: 7%" />
+    <col style="width: 11%" />
     </colgroup>
     <thead>
     <tr class="header">
@@ -54,28 +55,40 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <tbody>
     <tr class="odd">
     <td>F ’22</td>
-    <td>MATH 145</td>
-    <td>MATH 147</td>
-    <td>CS 145</td>
-    <td>ENGL 109</td>
-    <td>PHYS 121</td>
+    <td><span
+    title="MATH145 - Algebra (Advanced Level)">MT145</span></td>
+    <td><span
+    title="MATH147 - Calculus 1 (Advanced Level)">MT147</span></td>
+    <td><span
+    title="CS145 - Designing Functional Programs (Advanced Level)">CS145</span></td>
+    <td><span
+    title="ENGL109 - Introduction to Academic Writing">EN109</span></td>
+    <td><span title="PHYS121 - Mechanics">PY121</span></td>
     <td></td>
     <td></td>
     </tr>
     <tr class="even">
     <td>W ’23</td>
-    <td>MATH 146</td>
-    <td>MATH 148</td>
-    <td>CS 146</td>
-    <td>CS 136L</td>
-    <td>PD 1</td>
-    <td>PHYS 122</td>
-    <td>ENGL 108B</td>
+    <td><span
+    title="MATH146 - Linear Algebra 1 (Advanced Level)">MT146</span></td>
+    <td><span
+    title="MATH148 - Calculus 2 (Advanced Level)">MT148</span></td>
+    <td><span
+    title="CS146 - Elementary Algorithm Design and Data Abstraction (Advanced Level)">CS146</span></td>
+    <td><span
+    title="CS136L - Tools and Techniques for Software Development">CS136L</span></td>
+    <td><span title="PD1 - Career Fundamentals">PD1</span></td>
+    <td><span
+    title="PHYS122 - Waves, Electricity and Magnetism">PY122</span></td>
+    <td><span
+    title="ENGL108B - Global English Literatures">EN108B</span></td>
     </tr>
     <tr class="odd">
     <td>S ’23</td>
-    <td>COOP 1</td>
-    <td>PD 11</td>
+    <td><span
+    title="COOP 1 - Blockchain Software Engineer at Dandelion Networks">CP1</span></td>
+    <td><span
+    title="PD11 - Processes for Technical Report Writing">PD11</span></td>
     <td></td>
     <td></td>
     <td></td>
@@ -84,39 +97,60 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </tr>
     <tr class="even">
     <td>F ’23</td>
-    <td>MATH 245</td>
-    <td>MATH 247 <a
+    <td><span
+    title="MATH245 - Linear Algebra 2 (Advanced Level)">MT245</span></td>
+    <td><span title="MATH247 - Calculus 3 (Advanced Level)">MT247</span>
+    <a
     href="https://www.richardwu.ca/notes/math247-notes.pdf">(*)</a></td>
-    <td>STAT 240</td>
-    <td>CS 245E <a
+    <td><span
+    title="STAT240 - Probability (Advanced Level)">ST240</span></td>
+    <td><span
+    title="CS245E - Logic and Computation (Enriched)">CS245E</span> <a
     href="https://www.youtube.com/playlist?list=PLPW2keNyw-utXOOzLR-Wp1p0eE5LEtv3N">(*)</a></td>
-    <td>CS 246E <a
+    <td><span
+    title="CS246E - Object-Oriented Software Development (Enriched)">CS246E</span>
+    <a
     href="https://notes.sibeliusp.com/pdf/1189/cs246e.pdf">(*)</a></td>
     <td></td>
     <td></td>
     </tr>
     <tr class="odd">
     <td>W ’24</td>
-    <td>MATH 249 <a
+    <td><span
+    title="MATH249 - Introduction to Combinatorics (Advanced Level)">MT249</span>
+    <a
     href="https://melczer.ca/249/wagner_239_249_notes.pdf">(*)</a></td>
-    <td>STAT 241 <a
+    <td><span title="STAT241 - Statistics (Advanced Level)">ST241</span>
+    <a
     href="https://doi.org/10.1093/oso/9780192867735.001.0001">(*)</a></td>
-    <td>CO 255 <a
+    <td><span
+    title="CO255 - Introduction to Optimization (Advanced Level)">CO255</span>
+    <a
     href="https://csclub.uwaterloo.ca/~c2kent/LectureNotes/co255-1191/CO255_CKclass.pdf">(*)</a></td>
-    <td>CS 240</td>
-    <td>CS 241</td>
+    <td><span
+    title="CS240 - Data Structures and Data Management">CS240</span></td>
+    <td><span
+    title="CS241 - Foundations of Sequential Programs">CS241</span></td>
     <td></td>
     <td></td>
     </tr>
     <tr class="even">
     <td>S ’24</td>
-    <td>COOP 2</td>
-    <td>PD 10</td>
-    <td>CS 251</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><span
+    title="COOP 2 - Research Assistantship under Professor Jane Gao">CP2</span></td>
+    <td><span
+    title="PD10 - Professional Responsibility in Computing">PD10</span></td>
+    <td><span
+    title="CS251 - Computer Organization and Design">CS251</span></td>
+    <td><span
+    title="CO330 - Combinatorial Enumeration"><em>CO330</em></span> <a
+    href="https://uwaterloo.ca/combinatorics-and-optimization/sites/default/files/uploads/documents/co330-notes_0.pdf">(*)</a></td>
+    <td><span
+    title="PMATH320 - Euclidean Geometry"><em>PM320</em></span></td>
+    <td><span
+    title="PMATH321 - Non-Euclidean Geometry"><em>PM321</em></span></td>
+    <td><span
+    title="CO739 - Topics in Combinatorics: Formalization in Combinatorics with Peter Nelson"><em>CO739</em></span></td>
     </tr>
     </tbody>
     </table>
@@ -225,6 +259,7 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </section>
     <section id="self-learning" class="episode">
     <h1>Self-Learning</h1>
+    <p>I am still going through entries ending with ◇.</p>
     <h2 id="concurrency"><strong>Concurrency</strong></h2>
     <ul>
     <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
@@ -240,17 +275,18 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
     <a href="https://learnyouahaskell.com/">(book)</a></li>
     </ul>
-    <h2 id="machine-learning"><strong>Machine Learning</strong></h2>
+    <h2 id="machine-learning-probability-and-statistics"><strong>Machine
+    Learning, Probability, and Statistics</strong></h2>
     <ul>
+    <li><em>Essential Statistics for Data Science</em> by Mu Zhu</li>
     <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
-    href="http://ciml.info/">(book)</a> (in progress)</li>
+    href="http://ciml.info/">(book)</a> ◇</li>
     </ul>
     <h2 id="cyber-security"><strong>Cyber Security</strong></h2>
     <ul>
     <li>We Chall <a
     href="https://www.wechall.net/challs">(challenges)</a> <a
-    href="./wargame/we-chall/index.html">[hints &amp; notes]</a> (in
-    progress)</li>
+    href="./wargame/we-chall/index.html">[hints &amp; notes]</a> ◇</li>
     </ul>
     <h2 id="graphics"><strong>Graphics</strong></h2>
     <ul>
@@ -258,7 +294,7 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a>
     <a
     href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a>
-    (in progress)</li>
+    ◇</li>
     </ul>
     </section>
     </div>
