--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Arnav Kumar</title>
-        <link rel="stylesheet" href="./assets/episodic.css"/>
+        <link rel="stylesheet" href="./assets/episodic.css" />
       </head>
   <body>
     <header>
@@ -20,10 +20,12 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <section id="site-introduction" class="episode">
     <h1>Site Introduction</h1>
     <ul>
-    <li>Links wrapped in (square|round) brackets are to content which I
-    (did|didn’t) create, respectively.</li>
-    <li>This website does not have a sitemap yet, as everything is
-    accesible from this homepage.</li>
+    <li>This site is best viewed through a computer, and wasn’t designed
+    for mobile use.</li>
+    <li>Links in (square|round) brackets are to content I (did|didn’t)
+    create, respectively.</li>
+    <li>This website does not have a sitemap; everything is accesible
+    from this homepage.</li>
     </ul>
     </section>
     </div>
@@ -255,23 +257,21 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <section id="self-learning" class="episode">
     <h1>Self-Learning</h1>
     <p>I am still going through entries ending with ◇.</p>
-    <h2 id="concurrency"><strong>Concurrency</strong></h2>
-    <ul>
-    <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
-    href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
-    </ul>
-    <h2 id="formal-logic"><strong>Formal Logic</strong></h2>
+    <h2 id="formal-logic-puzzles"><strong>Formal Logic &amp;
+    Puzzles</strong></h2>
     <ul>
     <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
     </ul>
     <h2 id="programming-languages"><strong>Programming
     Languages</strong></h2>
     <ul>
+    <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
+    href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
     <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
     <a href="https://learnyouahaskell.com/">(book)</a></li>
     </ul>
-    <h2 id="machine-learning-probability-and-statistics"><strong>Machine
-    Learning, Probability, and Statistics</strong></h2>
+    <h2 id="machine-learning-probability-statistics"><strong>Machine
+    Learning, Probability, &amp; Statistics</strong></h2>
     <ul>
     <li><em>Essential Statistics for Data Science</em> by Mu Zhu</li>
     <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
@@ -283,7 +283,8 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     href="https://www.wechall.net/challs">(challenges)</a> <a
     href="./wargame/we-chall/index.html">[hints &amp; notes]</a> ◇</li>
     </ul>
-    <h2 id="graphics"><strong>Graphics</strong></h2>
+    <h2 id="geometry-graphics"><strong>Geometry &amp;
+    Graphics</strong></h2>
     <ul>
     <li>University of Utah CS 4600 <a
     href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a>
