--- a/index.html
+++ b/index.html
@@ -152,6 +152,71 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </tbody>
     </table>
     </section>
+    <section id="projects" class="episode">
+    <h1>Projects</h1>
+    <h2
+    id="interplanetary-file-explorer-try-it-github-devpost-jan-2023"><strong>Interplanetary
+    File Explorer</strong> <a href="https://ipfe.elguindi.xyz/">[try
+    it]</a> <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
+    <a href="https://devpost.com/software/changeme">[Devpost]</a> <span
+    class="right">Jan 2023</span></h2>
+    <ul>
+    <li>A visual file explorer of an IPFS written in Golang, Python, and
+    JavaScript that uses one of Cohere’s NLP models to summarize and
+    categorize files based on metadata, and Estuary’s API to fetch the
+    files from the IPFS</li>
+    </ul>
+    <h2
+    id="prognosing-idiopathic-pulmonary-fibrosis-cwsf-paper-dec-2020---jun-2021"><strong>Prognosing
+    Idiopathic Pulmonary Fibrosis</strong> <a
+    href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a> <span
+    class="right">Dec 2020 - Jun 2021</span></h2>
+    <ul>
+    <li>Several machine learning models written to predict the
+    deterioration of the condition of the lungs over time for patients
+    of Idiopathic Pulmonary Fibrosis and give a level of confidence in
+    the prediction</li>
+    </ul>
+    </section>
+    <section id="computing-setup" class="episode">
+    <h1>Computing Setup</h1>
+    <p>My hardware consists of a single laptop which I connect to an
+    external monitor, keyboard, and mouse.</p>
+    <p>In pursuit of a simple, intuitive, and easily extensible
+    computing experience, I use:</p>
+    <ul>
+    <li><a href="https://github.com/leahneukirchen/cwm">(cwm)</a> as an
+    X11 window manager, extended with custom scripts</li>
+    <li><a href="https://tools.suckless.org/dmenu/">(dmenu_run)</a> as
+    an application launcher</li>
+    <li><a href="https://tools.suckless.org/dmenu/">(dmenu)</a> or <a
+    href="https://github.com/jhawthorn/fzy">(fzy)</a> as a menu for user
+    input in scripts</li>
+    <li><a href="https://sw.kovidgoyal.net/kitty/">(kitty)</a> as a
+    terminal emulator, with <a
+    href="https://www.gnu.org/software/bash/">(bash)</a>
+    integration</li>
+    <li><a href="https://kakoune.org/">(kakoune)</a> as a text editor,
+    often with external programs like <a
+    href="http://www.figlet.org/">(figlet)</a> and <a
+    href="https://boxes.thomasjensen.com/">(boxes)</a></li>
+    <li><a href="https://www.mozilla.org/firefox/">(firefox)</a>, <a
+    href="https://qutebrowser.org/">(qutebrowser)</a>, or <a
+    href="https://lynx.invisible-island.net/">(lynx)</a> as a web
+    browser</li>
+    <li><a
+    href="https://github.com/marcusbuffett/pipe-rename">(pipe-rename)</a>
+    or <a href="https://github.com/itchyny/mmv">(mmv-go)</a> for bulk
+    renaming</li>
+    <li><a href="https://texmacs.org/">(texmacs)</a> occasionally for
+    typesetting</li>
+    </ul>
+    <p>For more information, take a look at my dotfiles <a
+    href="https://github.com/arnavcs/dotfiles">[Github]</a> and scripts
+    <a href="https://github.com/arnavcs/scripts">[Github]</a>.</p>
+    </section>
+    </div>
+    <div class="right-col">
     <section id="presentations-lectures" class="episode">
     <h1>Presentations &amp; Lectures</h1>
     <h2
@@ -224,34 +289,6 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <ul>
     <li>Introduction to combinatory logic; showing numbers and
     operations on numbers can be expressed as combinators</li>
-    </ul>
-    </section>
-    </div>
-    <div class="right-col">
-    <section id="projects" class="episode">
-    <h1>Projects</h1>
-    <h2
-    id="interplanetary-file-explorer-try-it-github-devpost-jan-2023"><strong>Interplanetary
-    File Explorer</strong> <a href="https://ipfe.elguindi.xyz/">[try
-    it]</a> <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
-    <a href="https://devpost.com/software/changeme">[Devpost]</a> <span
-    class="right">Jan 2023</span></h2>
-    <ul>
-    <li>A visual file explorer of an IPFS written in Golang, Python, and
-    JavaScript that uses one of Cohere’s NLP models to summarize and
-    categorize files based on metadata, and Estuary’s API to fetch the
-    files from the IPFS</li>
-    </ul>
-    <h2
-    id="prognosing-idiopathic-pulmonary-fibrosis-cwsf-paper-dec-2020---jun-2021"><strong>Prognosing
-    Idiopathic Pulmonary Fibrosis</strong> <a
-    href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a> <span
-    class="right">Dec 2020 - Jun 2021</span></h2>
-    <ul>
-    <li>Several machine learning models written to predict the
-    deterioration of the condition of the lungs over time for patients
-    of Idiopathic Pulmonary Fibrosis and give a level of confidence in
-    the prediction</li>
     </ul>
     </section>
     <section id="self-learning" class="episode">
