--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <li><a href="https://texmacs.org/">(texmacs)</a> occasionally for
     typesetting</li>
     </ul>
-    <p>For more information, take a look at my dotfiles <a
-    href="https://github.com/arnavcs/dotfiles">[Github]</a> and scripts
-    <a href="https://github.com/arnavcs/scripts">[Github]</a>.</p>
+    <p>For more information, take a look at my <a
+    href="https://github.com/arnavcs/dotfiles">[dotfiles]</a> and <a
+    href="https://github.com/arnavcs/scripts">[scripts]</a>.</p>
     </section>
     </div>
     <div class="right-col">
@@ -293,7 +293,7 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </section>
     <section id="self-learning" class="episode">
     <h1>Self-Learning</h1>
-    <p>I am still going through entries ending with ◇.</p>
+    <p>I am still going through entries ending with &amp;.</p>
     <h2 id="formal-logic-puzzles"><strong>Formal Logic &amp;
     Puzzles</strong></h2>
     <ul>
@@ -312,13 +312,14 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <ul>
     <li><em>Essential Statistics for Data Science</em> by Mu Zhu</li>
     <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
-    href="http://ciml.info/">(book)</a> ◇</li>
+    href="http://ciml.info/">(book)</a> &amp;</li>
     </ul>
     <h2 id="cyber-security"><strong>Cyber Security</strong></h2>
     <ul>
     <li>We Chall <a
     href="https://www.wechall.net/challs">(challenges)</a> <a
-    href="./wargame/we-chall/index.html">[hints &amp; notes]</a> ◇</li>
+    href="./wargame/we-chall/index.html">[hints &amp; notes]</a>
+    &amp;</li>
     </ul>
     <h2 id="geometry-graphics"><strong>Geometry &amp;
     Graphics</strong></h2>
@@ -327,7 +328,7 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a>
     <a
     href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a>
-    ◇</li>
+    &amp;</li>
     </ul>
     </section>
     </div>
