--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Arnav Kumar</title>
+        <link rel="stylesheet" href="./assets/base.css" />
         <link rel="stylesheet" href="./assets/episodic.css" />
       </head>
   <body>
@@ -200,6 +201,13 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     often with external programs like <a
     href="http://www.figlet.org/">(figlet)</a> and <a
     href="https://boxes.thomasjensen.com/">(boxes)</a></li>
+    <li><a
+    href="https://pandoc.org/MANUAL.html#pandocs-markdown">(pandoc
+    markdown)</a> with <a
+    href="https://github.com/LaurentRDC/pandoc-plot">(pandoc-plot)</a>
+    and <a href="https://codebraid.org/">(codebraid)</a> filters, or
+    occassionally <a href="https://texmacs.org/">(texmacs)</a> for
+    typesetting</li>
     <li><a href="https://www.mozilla.org/firefox/">(firefox)</a>, <a
     href="https://qutebrowser.org/">(qutebrowser)</a>, or <a
     href="https://lynx.invisible-island.net/">(lynx)</a> as a web
@@ -208,8 +216,6 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     href="https://github.com/marcusbuffett/pipe-rename">(pipe-rename)</a>
     or <a href="https://github.com/itchyny/mmv">(mmv-go)</a> for bulk
     renaming</li>
-    <li><a href="https://texmacs.org/">(texmacs)</a> occasionally for
-    typesetting</li>
     </ul>
     <p>For more information, take a look at my <a
     href="https://github.com/arnavcs/dotfiles">[dotfiles]</a> and <a
@@ -217,6 +223,14 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </section>
     </div>
     <div class="right-col">
+    <section id="blog-writings" class="episode">
+    <h1>Blog &amp; Writings</h1>
+    <p>Dates are written in DD/MM/YY format.</p>
+    <ul>
+    <li><a href="">[04/06/24]</a> Reflection on the Waterloo Spring ’24
+    Game Jam WIP</li>
+    </ul>
+    </section>
     <section id="presentations-lectures" class="episode">
     <h1>Presentations &amp; Lectures</h1>
     <h2
@@ -294,18 +308,25 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <section id="self-learning" class="episode">
     <h1>Self-Learning</h1>
     <p>I am still going through entries ending with &amp;.</p>
+    <h2 id="combinatorics"><strong>Combinatorics</strong></h2>
+    <ul>
+    <li><em>Combinatorics and Partially Ordered Sets: Dimension
+    Theory</em> by William T. Trotter &amp;</li>
+    </ul>
     <h2 id="formal-logic-puzzles"><strong>Formal Logic &amp;
     Puzzles</strong></h2>
     <ul>
     <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
     </ul>
-    <h2 id="programming-languages"><strong>Programming
-    Languages</strong></h2>
+    <h2 id="programming-theory"><strong>Programming Theory</strong></h2>
     <ul>
     <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
     href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
     <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
     <a href="https://learnyouahaskell.com/">(book)</a></li>
+    <li><em>Structure and Interpretation of Computer Programs</em> by
+    Harold Abelson, Gerald Jay Sussman, and Julie Sussman <a
+    href="./self-learning/sicp/index.html">[reading club]</a> &amp;</li>
     </ul>
     <h2 id="machine-learning-probability-statistics"><strong>Machine
     Learning, Probability, &amp; Statistics</strong></h2>
@@ -313,13 +334,6 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <li><em>Essential Statistics for Data Science</em> by Mu Zhu</li>
     <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
     href="http://ciml.info/">(book)</a> &amp;</li>
-    </ul>
-    <h2 id="cyber-security"><strong>Cyber Security</strong></h2>
-    <ul>
-    <li>We Chall <a
-    href="https://www.wechall.net/challs">(challenges)</a> <a
-    href="./wargame/we-chall/index.html">[hints &amp; notes]</a>
-    &amp;</li>
     </ul>
     <h2 id="geometry-graphics"><strong>Geometry &amp;
     Graphics</strong></h2>
