--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1 id="title">Arnav Kumar</h1>
       </hgroup>
             <p><a href="https://github.com/arnavcs">[Github]</a> <a
+href="https://arnavcs.itch.io/">[itch.io]</a> <a
 href="./resume-cv/resume.pdf">[resume]</a> <a
 href="./resume-cv/cv.pdf">[CV]</a></p>
           </header>
@@ -31,6 +32,42 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </section>
     </div>
     <div class="left-col">
+    <section id="projects" class="episode">
+    <h1>Projects</h1>
+    <h2
+    id="bloom-itch.io-github-may-2024---jun-2024"><strong>Bloom</strong>
+    <a href="https://kdxiao.itch.io/bloom">[itch.io]</a> <a
+    href="https://github.com/kdxiao/bloom">[Github]</a> <span
+    class="right">May 2024 - Jun 2024</span></h2>
+    <ul>
+    <li>A submission made in 72 hours with Godot for a game jam. You are
+    a bee that pollinates flowers in a field to plant new hybrids.</li>
+    <li>Implemented colour mixing, screen wrapping, movement, and flower
+    spawning mechanics.</li>
+    </ul>
+    <h2
+    id="interplanetary-file-explorer-try-it-github-devpost-jan-2023"><strong>Interplanetary
+    File Explorer</strong> <a href="https://ipfe.elguindi.xyz/">[try
+    it]</a> <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
+    <a href="https://devpost.com/software/changeme">[Devpost]</a> <span
+    class="right">Jan 2023</span></h2>
+    <ul>
+    <li>A visual file explorer of an IPFS written in Golang, Python, and
+    JavaScript that uses one of Cohere’s NLP models to summarize and
+    categorize files based on metadata, and Estuary’s API to fetch the
+    files from the IPFS.</li>
+    </ul>
+    <h2
+    id="prognosing-ipf-cwsf-paper-dec-2020---jun-2021"><strong>Prognosing
+    IPF</strong> <a href="./projects/osic-cwsf-paper.pdf">[CWSF
+    paper]</a> <span class="right">Dec 2020 - Jun 2021</span></h2>
+    <ul>
+    <li>Several machine learning models written to predict the
+    deterioration of the condition of the lungs over time for patients
+    of Idiopathic Pulmonary Fibrosis (IPF) and give a level of
+    confidence in the prediction.</li>
+    </ul>
+    </section>
     <section id="formal-education" class="episode">
     <h1>Formal Education</h1>
     <p>Italics means self-taught or audited. Course names are
@@ -153,32 +190,6 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </tbody>
     </table>
     </section>
-    <section id="projects" class="episode">
-    <h1>Projects</h1>
-    <h2
-    id="interplanetary-file-explorer-try-it-github-devpost-jan-2023"><strong>Interplanetary
-    File Explorer</strong> <a href="https://ipfe.elguindi.xyz/">[try
-    it]</a> <a href="https://github.com/youssefsoli/IPFE">[Github]</a>
-    <a href="https://devpost.com/software/changeme">[Devpost]</a> <span
-    class="right">Jan 2023</span></h2>
-    <ul>
-    <li>A visual file explorer of an IPFS written in Golang, Python, and
-    JavaScript that uses one of Cohere’s NLP models to summarize and
-    categorize files based on metadata, and Estuary’s API to fetch the
-    files from the IPFS</li>
-    </ul>
-    <h2
-    id="prognosing-idiopathic-pulmonary-fibrosis-cwsf-paper-dec-2020---jun-2021"><strong>Prognosing
-    Idiopathic Pulmonary Fibrosis</strong> <a
-    href="./projects/osic-cwsf-paper.pdf">[CWSF paper]</a> <span
-    class="right">Dec 2020 - Jun 2021</span></h2>
-    <ul>
-    <li>Several machine learning models written to predict the
-    deterioration of the condition of the lungs over time for patients
-    of Idiopathic Pulmonary Fibrosis and give a level of confidence in
-    the prediction</li>
-    </ul>
-    </section>
     <section id="computing-setup" class="episode">
     <h1>Computing Setup</h1>
     <p>My hardware consists of a single laptop which I connect to an
@@ -223,12 +234,44 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </section>
     </div>
     <div class="right-col">
-    <section id="blog-writings" class="episode">
-    <h1>Blog &amp; Writings</h1>
-    <p>Dates are written in DD/MM/YY format.</p>
+    <section id="self-learning" class="episode">
+    <h1>Self-Learning</h1>
+    <p>I am still going through entries ending with &amp;.</p>
+    <h2 id="combinatorics"><strong>Combinatorics</strong></h2>
     <ul>
-    <li><a href="">[04/06/24]</a> Reflection on the Waterloo Spring ’24
-    Game Jam WIP</li>
+    <li><em>Combinatorics and Partially Ordered Sets: Dimension
+    Theory</em> by William T. Trotter &amp;</li>
+    </ul>
+    <h2 id="formal-logic-puzzles"><strong>Formal Logic &amp;
+    Puzzles</strong></h2>
+    <ul>
+    <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
+    </ul>
+    <h2 id="programming-theory"><strong>Programming Theory</strong></h2>
+    <ul>
+    <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
+    href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
+    <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
+    <a href="https://learnyouahaskell.com/">(book)</a></li>
+    <li><em>Structure and Interpretation of Computer Programs</em> by
+    Harold Abelson, Gerald Jay Sussman, and Julie Sussman <a
+    href="./self-learning/sicp/index.html">[reading club]</a> &amp;</li>
+    </ul>
+    <h2 id="machine-learning-probability-statistics"><strong>Machine
+    Learning, Probability, &amp; Statistics</strong></h2>
+    <ul>
+    <li><em>Essential Statistics for Data Science</em> by Mu Zhu</li>
+    <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
+    href="http://ciml.info/">(book)</a> &amp;</li>
+    </ul>
+    <h2 id="geometry-graphics"><strong>Geometry &amp;
+    Graphics</strong></h2>
+    <ul>
+    <li>University of Utah CS 4600 <a
+    href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a>
+    <a
+    href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a>
+    &amp;</li>
     </ul>
     </section>
     <section id="presentations-lectures" class="episode">
@@ -303,46 +346,6 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <ul>
     <li>Introduction to combinatory logic; showing numbers and
     operations on numbers can be expressed as combinators</li>
-    </ul>
-    </section>
-    <section id="self-learning" class="episode">
-    <h1>Self-Learning</h1>
-    <p>I am still going through entries ending with &amp;.</p>
-    <h2 id="combinatorics"><strong>Combinatorics</strong></h2>
-    <ul>
-    <li><em>Combinatorics and Partially Ordered Sets: Dimension
-    Theory</em> by William T. Trotter &amp;</li>
-    </ul>
-    <h2 id="formal-logic-puzzles"><strong>Formal Logic &amp;
-    Puzzles</strong></h2>
-    <ul>
-    <li><em>To Mock a Mockingbird</em> by Raymond Smullyan</li>
-    </ul>
-    <h2 id="programming-theory"><strong>Programming Theory</strong></h2>
-    <ul>
-    <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
-    href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
-    <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
-    <a href="https://learnyouahaskell.com/">(book)</a></li>
-    <li><em>Structure and Interpretation of Computer Programs</em> by
-    Harold Abelson, Gerald Jay Sussman, and Julie Sussman <a
-    href="./self-learning/sicp/index.html">[reading club]</a> &amp;</li>
-    </ul>
-    <h2 id="machine-learning-probability-statistics"><strong>Machine
-    Learning, Probability, &amp; Statistics</strong></h2>
-    <ul>
-    <li><em>Essential Statistics for Data Science</em> by Mu Zhu</li>
-    <li><em>A Course in Machine Learning</em> by Hal Daumé III <a
-    href="http://ciml.info/">(book)</a> &amp;</li>
-    </ul>
-    <h2 id="geometry-graphics"><strong>Geometry &amp;
-    Graphics</strong></h2>
-    <ul>
-    <li>University of Utah CS 4600 <a
-    href="https://youtube.com/playlist?list=PLplnkTzzqsZTfYh4UbhLGpI5kGd5oW_Hh">(lectures)</a>
-    <a
-    href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a>
-    &amp;</li>
     </ul>
     </section>
     </div>
