--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ href="./resume-cv/resume.pdf">[resume]</a> <a
 href="./resume-cv/cv.pdf">[CV]</a></p>
           </header>
     <hr class="lynx" />
-    <div class="intro">
+    <div class="epwrap">
     <section id="site-introduction" class="episode">
     <h1>Site Introduction</h1>
     <ul>
@@ -30,8 +30,17 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     from this homepage.</li>
     </ul>
     </section>
+    <section id="updates-and-changelog" class="episode">
+    <h1>Updates and Changelog</h1>
+    <ul>
+    <li>Uploaded link to first game jam project: Bloom. <span
+    class="right">5<sup>th</sup> Jun 2024</span></li>
+    <li>Created Wizard Reading Club webpage for SICP <span
+    class="right">4<sup>th</sup> Jun 2024</span></li>
+    </ul>
+    </section>
     </div>
-    <div class="left-col">
+    <div class="epwrap">
     <section id="projects" class="episode">
     <h1>Projects</h1>
     <h2
@@ -40,10 +49,10 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     href="https://github.com/kdxiao/bloom">[Github]</a> <span
     class="right">May 2024 - Jun 2024</span></h2>
     <ul>
-    <li>A submission made in 72 hours with Godot for a game jam. You are
-    a bee that pollinates flowers in a field to plant new hybrids.</li>
+    <li>A submission made in 72 hours with Godot for a game jam; you are
+    a bee that pollinates flowers in a field to plant new hybrids</li>
     <li>Implemented colour mixing, screen wrapping, movement, and flower
-    spawning mechanics.</li>
+    spawning mechanics</li>
     </ul>
     <h2
     id="interplanetary-file-explorer-try-it-github-devpost-jan-2023"><strong>Interplanetary
@@ -55,7 +64,7 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <li>A visual file explorer of an IPFS written in Golang, Python, and
     JavaScript that uses one of Cohere’s NLP models to summarize and
     categorize files based on metadata, and Estuary’s API to fetch the
-    files from the IPFS.</li>
+    files from the IPFS</li>
     </ul>
     <h2
     id="prognosing-ipf-cwsf-paper-dec-2020---jun-2021"><strong>Prognosing
@@ -65,7 +74,7 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <li>Several machine learning models written to predict the
     deterioration of the condition of the lungs over time for patients
     of Idiopathic Pulmonary Fibrosis (IPF) and give a level of
-    confidence in the prediction.</li>
+    confidence in the prediction</li>
     </ul>
     </section>
     <section id="formal-education" class="episode">
@@ -232,8 +241,6 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     href="https://github.com/arnavcs/dotfiles">[dotfiles]</a> and <a
     href="https://github.com/arnavcs/scripts">[scripts]</a>.</p>
     </section>
-    </div>
-    <div class="right-col">
     <section id="self-learning" class="episode">
     <h1>Self-Learning</h1>
     <p>I am still going through entries ending with &amp;.</p>
