--- a/self-learning/sicp/index.html
+++ b/self-learning/sicp/index.html
@@ -45,7 +45,7 @@
       <p>The Wizard Reading Club spawned from a curiosity of what the
       wizard book, <em>Structure and Interpretation of Computer
       Programs</em> by Harold Abelson, Gerald Jay Sussman, and Julie
-      Sussman has to offer.</p>
+      Sussman, has to offer.</p>
       <p>The text is avaliable completely for free in <a
       href="https://web.mit.edu/6.001/6.037/sicp.pdf">(pdf)</a> and <a
       href="https://mitp-content-server.mit.edu/books/content/sectbyfn/books_pres_0/6515/sicp.zip/full-text/book/book.html">(html)</a>
