--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Arnav Kumar</title>
-        <link rel="stylesheet" href="./assets/base.css" />
-        <link rel="stylesheet" href="./assets/episodic.css" />
+        <link rel="stylesheet" href="./assets/style.css" />
       </head>
   <body>
     <header>
@@ -29,7 +28,6 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     from this homepage.</li>
     </ul>
     </section>
-    <div class="epwrap">
     <section id="projects" class="episode">
     <h1>Projects</h1>
     <h2
@@ -75,14 +73,14 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     Undergraduate Degree</strong> : Bachelors of Computer Science</h2>
     <table style="width:99%;">
     <colgroup>
-    <col style="width: 0%" />
-    <col style="width: 14%" />
+    <col style="width: 1%" />
+    <col style="width: 15%" />
     <col style="width: 12%" />
-    <col style="width: 17%" />
-    <col style="width: 19%" />
+    <col style="width: 18%" />
     <col style="width: 14%" />
-    <col style="width: 7%" />
-    <col style="width: 11%" />
+    <col style="width: 15%" />
+    <col style="width: 12%" />
+    <col style="width: 8%" />
     </colgroup>
     <thead>
     <tr class="header">
@@ -93,40 +91,44 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <tbody>
     <tr class="odd">
     <td>F ’22</td>
+    <td><span title="MATH 145 - Algebra (Advanced Level)">MATH
+    145</span></td>
+    <td><span title="MATH 147 - Calculus 1 (Advanced Level)">MATH
+    147</span></td>
     <td><span
-    title="MATH145 - Algebra (Advanced Level)">MT145</span></td>
-    <td><span
-    title="MATH147 - Calculus 1 (Advanced Level)">MT147</span></td>
-    <td><span
-    title="CS145 - Designing Functional Programs (Advanced Level)">CS145</span></td>
-    <td><span
-    title="ENGL109 - Introduction to Academic Writing">EN109</span></td>
-    <td><span title="PHYS121 - Mechanics">PY121</span></td>
+    title="CS 145 - Designing Functional Programs (Advanced Level)">CS
+    145</span></td>
+    <td><span title="ENGL 109 - Introduction to Academic Writing">ENGL
+    109</span></td>
+    <td><span title="PHYS 121 - Mechanics">PHYS 121</span></td>
     <td></td>
     <td></td>
     </tr>
     <tr class="even">
     <td>W ’23</td>
+    <td><span title="MATH 146 - Linear Algebra 1 (Advanced Level)">MATH
+    146</span></td>
+    <td><span title="MATH 148 - Calculus 2 (Advanced Level)">MATH
+    148</span></td>
     <td><span
-    title="MATH146 - Linear Algebra 1 (Advanced Level)">MT146</span></td>
+    title="CS 146 - Elementary Algorithm Design and Data Abstraction (Advanced Level)">CS
+    146</span></td>
     <td><span
-    title="MATH148 - Calculus 2 (Advanced Level)">MT148</span></td>
-    <td><span
-    title="CS146 - Elementary Algorithm Design and Data Abstraction (Advanced Level)">CS146</span></td>
-    <td><span
-    title="CS136L - Tools and Techniques for Software Development">CS136L</span></td>
-    <td><span title="PD1 - Career Fundamentals">PD1</span></td>
-    <td><span
-    title="PHYS122 - Waves, Electricity and Magnetism">PY122</span></td>
-    <td><span
-    title="ENGL108B - Global English Literatures">EN108B</span></td>
+    title="CS 136L - Tools and Techniques for Software Development">CS
+    136L</span></td>
+    <td><span title="ENGL 108B - Global English Literatures">ENGL
+    108B</span></td>
+    <td><span title="PHYS 122 - Waves, Electricity and Magnetism">PHYS
+    122</span></td>
+    <td><span title="PD 1 - Career Fundamentals">PD 1</span></td>
     </tr>
     <tr class="odd">
     <td>S ’23</td>
     <td><span
-    title="COOP 1 - Blockchain Software Engineer at Dandelion Networks">CP1</span></td>
-    <td><span
-    title="PD11 - Processes for Technical Report Writing">PD11</span></td>
+    title="COOP 1 - Blockchain Software Engineer at Dandelion Networks">COOP
+    1</span></td>
+    <td><span title="PD 11 - Processes for Technical Report Writing">PD
+    11</span></td>
     <td></td>
     <td></td>
     <td></td>
@@ -135,100 +137,66 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     </tr>
     <tr class="even">
     <td>F ’23</td>
+    <td><span title="MATH 245 - Linear Algebra 2 (Advanced Level)">MATH
+    245</span></td>
+    <td><span title="MATH 247 - Calculus 3 (Advanced Level)">MATH
+    247</span></td>
+    <td><span title="STAT 240 - Probability (Advanced Level)">STAT
+    240</span></td>
+    <td><span title="CS 245E - Logic and Computation (Enriched)">CS
+    245E</span></td>
     <td><span
-    title="MATH245 - Linear Algebra 2 (Advanced Level)">MT245</span></td>
-    <td><span title="MATH247 - Calculus 3 (Advanced Level)">MT247</span>
-    <a
-    href="https://www.richardwu.ca/notes/math247-notes.pdf">(*)</a></td>
-    <td><span
-    title="STAT240 - Probability (Advanced Level)">ST240</span></td>
-    <td><span
-    title="CS245E - Logic and Computation (Enriched)">CS245E</span> <a
-    href="https://www.youtube.com/playlist?list=PLPW2keNyw-utXOOzLR-Wp1p0eE5LEtv3N">(*)</a></td>
-    <td><span
-    title="CS246E - Object-Oriented Software Development (Enriched)">CS246E</span>
-    <a
-    href="https://notes.sibeliusp.com/pdf/1189/cs246e.pdf">(*)</a></td>
+    title="CS 246E - Object-Oriented Software Development (Enriched)">CS
+    246E</span></td>
     <td></td>
     <td></td>
     </tr>
     <tr class="odd">
     <td>W ’24</td>
     <td><span
-    title="MATH249 - Introduction to Combinatorics (Advanced Level)">MT249</span>
-    <a
-    href="https://melczer.ca/249/wagner_239_249_notes.pdf">(*)</a></td>
-    <td><span title="STAT241 - Statistics (Advanced Level)">ST241</span>
-    <a
-    href="https://doi.org/10.1093/oso/9780192867735.001.0001">(*)</a></td>
+    title="MATH 249 - Introduction to Combinatorics (Advanced Level)">MATH
+    249</span></td>
+    <td><span title="STAT 241 - Statistics (Advanced Level)">STAT
+    241</span></td>
     <td><span
-    title="CO255 - Introduction to Optimization (Advanced Level)">CO255</span>
-    <a
-    href="https://csclub.uwaterloo.ca/~c2kent/LectureNotes/co255-1191/CO255_CKclass.pdf">(*)</a></td>
-    <td><span
-    title="CS240 - Data Structures and Data Management">CS240</span></td>
-    <td><span
-    title="CS241 - Foundations of Sequential Programs">CS241</span></td>
+    title="CO 255 - Introduction to Optimization (Advanced Level)">CO
+    255</span></td>
+    <td><span title="CS 240 - Data Structures and Data Management">CS
+    240</span></td>
+    <td><span title="CS 241 - Foundations of Sequential Programs">CS
+    241</span></td>
     <td></td>
     <td></td>
     </tr>
     <tr class="even">
     <td>S ’24</td>
     <td><span
-    title="COOP 2 - Research Assistantship under Professor Jane Gao">CP2</span></td>
+    title="COOP 2 - Research Assistantship under Professor Jane Gao">COOP
+    2</span></td>
     <td><span
-    title="PD10 - Professional Responsibility in Computing">PD10</span></td>
-    <td><span
-    title="CS251 - Computer Organization and Design">CS251</span></td>
+    title="PD 10 - Professional Responsibility in Computing">PD
+    10</span></td>
+    <td><span title="CS 251 - Computer Organization and Design">CS
+    251</span></td>
     <td></td>
     <td></td>
     <td></td>
     <td></td>
     </tr>
+    <tr class="odd">
+    <td>F ’24</td>
+    <td><span title="CS 350 - Operating Systems">CS 350</span></td>
+    <td><span title="CS 341 - Algorithms">CS 341</span></td>
+    <td><span title="CS 370 - Numerical Computation">CS 370</span></td>
+    <td><span title="PHYS 256 - Geometrical and Physical Optics">PHYS
+    256</span></td>
+    <td><span title="FINE 100 - Studio Fundamentals">FINE
+    100</span></td>
+    <td></td>
+    <td></td>
+    </tr>
     </tbody>
     </table>
-    </section>
-    <section id="computing-setup" class="episode">
-    <h1>Computing Setup</h1>
-    <p>My hardware consists of a single laptop which I connect to an
-    external monitor, keyboard, and mouse.</p>
-    <p>In pursuit of a simple, intuitive, and easily extensible
-    computing experience, I use:</p>
-    <ul>
-    <li><a href="https://github.com/leahneukirchen/cwm">(cwm)</a> as an
-    X11 window manager, extended with custom scripts</li>
-    <li><a href="https://tools.suckless.org/dmenu/">(dmenu_run)</a> as
-    an application launcher</li>
-    <li><a href="https://tools.suckless.org/dmenu/">(dmenu)</a> or <a
-    href="https://github.com/jhawthorn/fzy">(fzy)</a> as a menu for user
-    input in scripts</li>
-    <li><a href="https://sw.kovidgoyal.net/kitty/">(kitty)</a> as a
-    terminal emulator, with <a
-    href="https://www.gnu.org/software/bash/">(bash)</a>
-    integration</li>
-    <li><a href="https://kakoune.org/">(kakoune)</a> as a text editor,
-    often with external programs like <a
-    href="http://www.figlet.org/">(figlet)</a> and <a
-    href="https://boxes.thomasjensen.com/">(boxes)</a></li>
-    <li><a
-    href="https://pandoc.org/MANUAL.html#pandocs-markdown">(pandoc
-    markdown)</a> with <a
-    href="https://github.com/LaurentRDC/pandoc-plot">(pandoc-plot)</a>
-    and <a href="https://codebraid.org/">(codebraid)</a> filters, or
-    occassionally <a href="https://texmacs.org/">(texmacs)</a> for
-    typesetting</li>
-    <li><a href="https://www.mozilla.org/firefox/">(firefox)</a>, <a
-    href="https://qutebrowser.org/">(qutebrowser)</a>, or <a
-    href="https://lynx.invisible-island.net/">(lynx)</a> as a web
-    browser</li>
-    <li><a
-    href="https://github.com/marcusbuffett/pipe-rename">(pipe-rename)</a>
-    or <a href="https://github.com/itchyny/mmv">(mmv-go)</a> for bulk
-    renaming</li>
-    </ul>
-    <p>For more information, take a look at my <a
-    href="https://github.com/arnavcs/dotfiles">[dotfiles]</a> and <a
-    href="https://github.com/arnavcs/scripts">[scripts]</a>.</p>
     </section>
     <section id="self-learning" class="episode">
     <h1>Self-Learning</h1>
@@ -249,9 +217,6 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     href="./self-learning/concurrency-in-go/notes.pdf">[notes]</a></li>
     <li><em>Learn You a Haskell for Great Good!</em> by Miran Lipovača
     <a href="https://learnyouahaskell.com/">(book)</a></li>
-    <li><em>Structure and Interpretation of Computer Programs</em> by
-    Harold Abelson, Gerald Jay Sussman, and Julie Sussman <a
-    href="./self-learning/sicp/index.html">[reading club]</a> &amp;</li>
     </ul>
     <h2 id="machine-learning-probability-statistics"><strong>Machine
     Learning, Probability, &amp; Statistics</strong></h2>
@@ -268,10 +233,21 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     <a
     href="https://graphics.cs.utah.edu/courses/cs4600/fall2020/">(assignments)</a>
     &amp;</li>
+    <li>Geometric Algebra Primer <a
+    href="http://www.jaapsuter.com/geometric-algebra/">(source)</a>
+    &amp;</li>
     </ul>
     </section>
     <section id="presentations-lectures" class="episode">
     <h1>Presentations &amp; Lectures</h1>
+    <h2
+    id="dimension-of-posets-and-random-graph-orders-university-of-waterloo-1st-aug-2024"><strong>Dimension
+    of Posets and Random Graph Orders</strong> @ University of Waterloo
+    <span class="right">1<sup>st</sup> Aug 2024</span></h2>
+    <ul>
+    <li>Presentation of work completed during research term under Jane
+    Gao</li>
+    </ul>
     <h2
     id="streams-and-lazy-evaluation-webber-academy-programming-club-notes-13th-oct-2023"><strong>Streams
     and Lazy Evaluation</strong> @ Webber Academy Programming Club <a
@@ -344,7 +320,6 @@ href="./resume-cv/cv.pdf">[CV]</a></p>
     operations on numbers can be expressed as combinators</li>
     </ul>
     </section>
-    </div>
     <hr class="lynx" />
     <footer>
             <p>Page part of <a href="https://ring.simonwu.dev/">(Simon’s
